2008-03-26  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/dicom.c: Forget about negative values in signed
	data and scale positive values appropriately. Also fixed signed
	values in the 8 bpp case, and added some comments.
	
2008-03-26  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/dicom.c: made the dicom plug-in a bit better.
	
	1. Parse the default little-endian encoding correctly.
	2. Handle signed pixel data.
	3. Support "bits stored" and "high bit" meta data fields.
	4. Throw away the bogus "max" value based metering.

2008-03-26  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimptoolbox.c: make the wilber area a bit smaller.

2008-03-26  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimptoolbox.[ch]: store the toolbox area's vbox in
	the widget struct.

	* app/widgets/gimptoolbox-dnd.c (gimp_toolbox_dnd_init): use it as
	DND target instead of the wbox with the tool buttons.

2008-03-26  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimptoolbox.[ch]: big wilber is watching you from
	the toolbox! Removed forgotten menubar cruft.

2008-03-26  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcairo-wilber.[ch]: 
	* app/display/gimpcanvas.c (gimp_canvas_draw_drop_zone): hide ugly
	details behind a sane API.

2008-03-26  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpdisplayshell.c (gimp_display_shell_empty):
	improve tooltip here too.

2008-03-26  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcairo-wilber.c: include a better Wilber path,
	thanks to Jimmac.

	* app/display/gimpcanvas.c (gimp_canvas_draw_drop_zone): undid
	scaling "fix", instead take the offset into account. Draw with
	transparency.

2008-03-26  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpcanvas.c (gimp_canvas_draw_drop_zone): fix scaling.

2008-03-26  Sven Neumann  <sven@gimp.org>

	* app/widgets/Makefile.am
	* app/widgets/gimpcairo-wilber.[ch]: new files that renders a
	Wilber image as a Cairo path. Or at least it is supposed to do